k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: frontend-app-instance
      app.kubernetes.io/name: frontend-weather-app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: frontend-app-instance
        app.kubernetes.io/name: frontend-weather-app
    spec:
      containers:
        - name: frontend-app
          # Will be replaced by kustomize anyway
          image: quay.io/tim_walter_ibm/emea-06-next:1
          ports:
            - containerPort: 8080
