k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: frontend-app-instance
    app.kubernetes.io/name: frontend-weather-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
